// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests in <GifGrid /> should match with its snapshot 1`] = `
<Fragment>
  <h3
    className="animate__animated animate_fadeIn"
  >
    Hello world
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Tests in <GifGrid /> should show items when images are loaded with useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate_fadeIn"
  >
    Hello world
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Something"
      url="https://localhost/something.jpg"
    />
    <GifGridItem
      id="123"
      key="123"
      title="Something"
      url="https://localhost/something.jpg"
    />
  </div>
</Fragment>
`;
